# CPS841

./: TF - Malware.ipynb  Untitled1.ipynb  y2.p  y26.p
files/: Untitled.ipynb  decision.dot  densenet.ipynb  ds.wpkds.wpkds  wisard_sb.py  y6.p
projeto_malwisard/: .gitignore  Melhorias.md  README.md  _thermometer12_adware_.txt  decision.dot  requirements.txt  thermometer12_6classes.txt  thermometer12_6classes_500.txt
projeto_malwisard/BTHOWeN/: ruu_models.py  train_malevis_wisard.py
projeto_malwisard/ULEEN/: requirements.txt  run.py  test_uleen_model.py  uleen_test_results_20251127_204315.txt
projeto_malwisard/ULEEN/software_model/: h3_hash_python.py  model.py
projeto_malwisard/bloomwisard/core/: CMakeLists.txt  Makefile  setup.py
projeto_malwisard/bloomwisard/core/src/: bind.cc  bind.h  bloomwisard.cc  dict_wisard.cc  wisard.cc
projeto_malwisard/bloomwisard/test/: test.py  wisard_results_20251127_202629.txt  wisard_results_20251127_221901.txt  wisard_results_20251127_223321.txt  wisard_results_20251127_223859.txt  wisard_results_20251127_224658.txt  wisard_results_20251127_225120.txt  (+5 more)
projeto_malwisard/src/: README-gpt.md  decision.dot  densenet.py  forget.py  gerarpickle.py  join_dataset.py  main.py  main2.py  preproc.py  preprocess.py  test.py  thermometer12.py  thermometer12_Trojan.txt  thermometer12_Worm.txt  thermometer12_adware.txt  unary.py  virus.py  visualize_dataset.py  wisard.py  wisard_6.py  wisard_adware.py  wisard_backdoor.py  wisard_trojan.py  wisard_virus.py  wisard_worm.py
server/: gerarpickle.py  main.py  virus.py  wisard.py
(+4 files in other folders)
